# mcp-registry

./: .gitignore  Cargo.toml  README.md  mcp-server.toml
docs/: api-reference.md
src/: main.rs  server.rs  store.rs  types.rs
